# gamedev

./: build.sh
00_env_test/: CMakeLists.txt  main.cpp
